--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "gulp-sourcemaps": "^2.6.4",
         "gulp-webserver": "^0.9.1",
         "node-sass": "^4.10.0"
+    },
+    "dependencies": {
+        "normalize.css": "^8.0.1"
     }
 }
